WebDeploy/manifests/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: pharm-sim

  annotations:
    image.openshift.io/triggers: >-
      [
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "pharm-sim:release",
            "namespace": "excaperoom-ohtu-s2026"
          },
          "fieldPath": "spec.template.spec.containers[?(@.name==\"pharm-sim\")].image",
          "pause": "false"
        }
      ]
