WebDeploy/manifests/overlays/production/route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route

metadata:
  name: pharm-sim

spec:
  host: excaperoom-ohtu-s2026-pharm-sim.apps.okd-cs-prod-0.k8s.cs.helsinki.fi
